gallery.css
/* ... */
.dragonball-container .dragonball {
  pointer-events: all;
}

.dragonball-cursor {
    cursor: url('dragonballs/dragon_radar.png') 0 0, auto;
}

/* Mobile Disable */
@media (max-width: 768px) {
  .dragonball {
      width: 60px;
      height: 60px;
      min-width: 60px;
      min-height: 60px;
  }

  .dragonball-container {
      touch-action: none; /* Prevent scroll interference */
  }

  .wish-message-container img {
    width: 80vw;
    margin-top: 10vh;
  }

.wish-message {
    font-size: 1.8rem;
    padding: 10px 20px;
    margin: 10px 0;
  }

/* Ensure Spotify button is above footer on mobile */
.spotify-button {
    position: absolute; /* Use absolute positioning */
    bottom: 120px; /* 120px above the footer */
    left: 50%; /* Center the button horizontally */
    transform: translateX(-50%); /* Correct the centering */
    margin-bottom: 0; /* Remove any default margin-bottom */
  }
}

